Fixing alignment of primary area and date in Safari

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -3180,7 +3180,8 @@ body.loading .quicklinks {
   .article-header__byline li *,
   .news-card__byline li,
   .news-card__byline li * {
-    display: inline-block; }
+    display: inline-block;
+    vertical-align: top; }
   .article-header__byline .news-card__primary-area::before,
   .article-header__byline .article-header__primary-area::before,
   .news-card__byline .news-card__primary-area::before,
@@ -5699,7 +5700,7 @@ figure.align-center {
 .article-header__date {
   color: #506380;
   display: inline-block;
-  margin-top: 4px; }
+  vertical-align: top; }
   .field-featured-media-article .news-card__date::before,
   .media-coverage__list-date::before,
   .article-header__date::before {
