--- a/docroot/themes/custom/ucsf/scss/node/_node-article.scss
+++ b/docroot/themes/custom/ucsf/scss/node/_node-article.scss
@@ -450,6 +450,7 @@
   li,
   li * {
     display: inline-block;
+    vertical-align: top;
   }
 
   .news-card__primary-area,
