--- a/docroot/themes/custom/ucsf/scss/node/_node-news-center.scss
+++ b/docroot/themes/custom/ucsf/scss/node/_node-news-center.scss
@@ -320,7 +320,8 @@
 .article-header__date {
   color: $gray-blue;
   display: inline-block;
-  margin-top: 4px;
+  vertical-align: top;
+  //margin-top: 4px;
 
   &::before {
     content: ' ';
